slight visual bug

--- a/GOL_MFA_Tutorial.html
+++ b/GOL_MFA_Tutorial.html
@@ -199,7 +199,7 @@
         </ul>
         <img src="images/navToSecurity.jpg" alt="General settings page" class="screenshot">
         <ul>
-            <li>Click on Security to go to the security page.</li>
+            <li>Click on <img src="images/securityLogo.png" alt="Security" class="inline-icon"> Security to go to the security page.</li>
         </ul>
         <img src="images/securityPage.png" alt="Security page" class="screenshot">
 
