additional visual bug

--- a/GOL_MFA_Tutorial.html
+++ b/GOL_MFA_Tutorial.html
@@ -190,16 +190,16 @@
         <div class="step">3. From the ChatGPT home page, click on your user profile in the bottom left corner.</div>
         <img src="images/profileLocation.png" alt="User profile in bottom left corner" class="screenshot-small">
 
-        <div class="step">4. Select <img src="images/settingsLogo.png" alt="Settings" class="inline-icon"> Settings from the menu that appears.</div>
+        <div class="step">4. Select <img src="images/settingsLogo.png" alt="Settings" class="inline-icon"> from the menu that appears.</div>
         <img src="images/settingsLocation.png" alt="Settings menu" class="screenshot-small">
 
         <div class="step">5. Navigate to security tab</div>
         <ul>
-            <li>You'll see this page after selecting <img src="images/settingsLogo.png" alt="Settings" class="inline-icon"> Settings.</li>
+            <li>You'll see this page after selecting <img src="images/settingsLogo.png" alt="Settings" class="inline-icon">.</li>
         </ul>
         <img src="images/navToSecurity.jpg" alt="General settings page" class="screenshot">
         <ul>
-            <li>Click on <img src="images/securityLogo.png" alt="Security" class="inline-icon"> Security to go to the security page.</li>
+            <li>Click on <img src="images/securityLogo.png" alt="Security" class="inline-icon"> to go to the security page.</li>
         </ul>
         <img src="images/securityPage.png" alt="Security page" class="screenshot">
 
