removed extra periods

--- a/GOL_MFA_Tutorial.html
+++ b/GOL_MFA_Tutorial.html
@@ -187,10 +187,10 @@
             <li>If you signed up using a Google, Microsoft, or Apple account, then select the same option.</li>
         </ul>
 
-        <div class="step">3. From the ChatGPT home page, click on your user profile in the bottom left corner.</div>
+        <div class="step">3. From the ChatGPT home page, click on your user profile in the bottom left corner</div>
         <img src="images/profileLocation.png" alt="User profile in bottom left corner" class="screenshot-small">
 
-        <div class="step">4. Select <img src="images/settingsLogo.png" alt="Settings" class="inline-icon"> from the menu that appears.</div>
+        <div class="step">4. Select <img src="images/settingsLogo.png" alt="Settings" class="inline-icon"> from the menu that appears</div>
         <img src="images/settingsLocation.png" alt="Settings menu" class="screenshot-small">
 
         <div class="step">5. Navigate to security tab</div>
@@ -203,7 +203,7 @@
         </ul>
         <img src="images/securityPage.png" alt="Security page" class="screenshot">
 
-        <div class="step">6. Click the button on the right side of the page next to "Authenticator App".</div>
+        <div class="step">6. Click the button on the right side of the page next to "Authenticator App"</div>
         <img src="images/authToggle1.png" alt="Authenticator App toggle button" style="width: 650px; height: auto; margin: 15px 0; border: 1px solid #ddd; border-radius: 5px;">
 
         <div class="step">7. Open the authenticator app on your smart phone</div>
